# smartGateway

./: .gitignore  CMakeLists.txt  README.md
arduino/: README.md
config/: CMakeLists.txt
include/RF24Driver/: RF24Gateway.h  RF24Mesh.h
include/common/RF24Driver/: RF24.h  RF24Gateway.h  RF24Mesh.h  RF24Mesh_config.h  RF24Network.h  RF24Network_config.h  RF24_config.h  Sync.h  nRF24L01.h  printf.h  userConfig.h
include/common/app_common/: rf_util.hpp
include/common/utility/: RF24_arch_config.h  bcm2835.h  includes.h  interrupt.h  spi.h
include/utility/: includes.h
src/: CMakeLists.txt
src/common/RF24Driver/: RF24.cpp  RF24Gateway.cpp  RF24Mesh.cpp  RF24Network.cpp  Sync.cpp
src/common/app_common/: rf_util.cpp
src/common/utility/: bcm2835.c  interrupt.cpp  spi.cpp
src/config/: CMakeLists.txt  configure
src/node/: CMakeLists.txt  RF24_server.cpp
src/server/RF24_server/: CMakeLists.txt  RF24_server.cpp
src/server/http_server/: CMakeLists.txt  http.html  http_server.cpp
test/: CMakeLists.txt  test_RF24_server.cpp
