FILE(GLOB_RECURSE RF24_SERVER_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)


SET(RF24_SERVER_TARGET _${RF24_SERVER_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/github/cpp_redis/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/github/cpp_redis/include/network)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/github/cpp_redis/include/utils)

ADD_EXECUTABLE(${RF24_SERVER_TARGET} ${RF24_SERVER_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/github/translib/include)

TARGET_LINK_LIBRARIES(${RF24_SERVER_TARGET} ${PROJECT_NAME} pthread event log4cplus ncurses translib tacopie cpp_redis)

SET_TARGET_PROPERTIES(${RF24_SERVER_TARGET} PROPERTIES OUTPUT_NAME ${RF24_SERVER_BINARY})

ADD_DEFINITIONS(-DTEST)