FILE(GLOB_RECURSE HTTP_SERVER_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)


SET(HTTP_SERVER_TARGET _${HTTP_SERVER_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_EXECUTABLE(${HTTP_SERVER_TARGET} ${HTTP_SERVER_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${HTTP_SERVER_TARGET} ${PROJECT_NAME} pthread event log4cplus ncurses)

SET_TARGET_PROPERTIES(${HTTP_SERVER_TARGET} PROPERTIES OUTPUT_NAME ${HTTP_SERVER_BINARY})

ADD_DEFINITIONS(-DTEST)
